--- a/order-success-2.html
+++ b/order-success-2.html
@@ -2071,7 +2071,7 @@
 			<!-- order -->
 			<section class="order" id="order">
 				<div class="container">
-					<div class="order__wrap order__wrap--md order__wrap--center">
+					<div class="order__wrap order__wrap--md">
 						<div class="order__top">
 							<h1 class="order__heading">Спасибо за заказ</h1>
 							<span class="order__number">Номер заказа: <span>109342</span></span>
@@ -2186,91 +2186,91 @@
 								</div>
 							</div>
 						</div>
-						<div class="order__bottom">
-							<div class="order__block order__block--fifty order__block--desktop">
-								<div class="pickup-point">
-									<div class="pickup-point__slider">
-										<div class="pickup-point__top">
-											<h3 class="pickup-point__title">Пункт самовывоза</h3>
-											<div class="swiper-controls pickup-point__slider-controls">
-												<button class="swiper-button-prev" aria-label="Назад">
-													<svg class="swiper-button-icon">
-														<use xlink:href="img/sprite.svg#icon-arrow-prev"></use>
-													</svg>
-												</button>
-												<button class="swiper-button-next" aria-label="Далее">
-													<svg class="swiper-button-icon">
-														<use xlink:href="img/sprite.svg#icon-arrow-next"></use>
-													</svg>
-												</button>
-											</div>
+					</div>
+					<div class="order__bottom">
+						<div class="order__block order__block--desktop">
+							<div class="pickup-point">
+								<div class="pickup-point__slider">
+									<div class="pickup-point__top">
+										<h3 class="pickup-point__title">Пункт самовывоза</h3>
+										<div class="swiper-controls pickup-point__slider-controls">
+											<button class="swiper-button-prev" aria-label="Назад">
+												<svg class="swiper-button-icon">
+													<use xlink:href="img/sprite.svg#icon-arrow-prev"></use>
+												</svg>
+											</button>
+											<button class="swiper-button-next" aria-label="Далее">
+												<svg class="swiper-button-icon">
+													<use xlink:href="img/sprite.svg#icon-arrow-next"></use>
+												</svg>
+											</button>
 										</div>
-										<div class="pickup-point__slider-wraper">
-											<div class="swiper">
-												<div class="swiper-wrapper">
-													<div class="swiper-slide">
-														<div class="pickup-point__item">
-															<h4 class="pickup-point__name">Аптека ADEL N58</h4>
-															<p class="pickup-point__description">ст. метро "Партизанская", вестибюль 1; выход к ул. Долгобродской</p>
-															<a href="#" class="pickup-point__link">
-																<svg>
-																	<use xlink:href="img/sprite.svg#icon-location-filled"></use>
-																</svg>
-																<span>Посмотреть на карте</span>
-															</a>
-															<div class="pickup-point__blocks">
-																<div class="pickup-point__block">
-																	<h4 class="pickup-point__subtitle">График работы</h4>
-																	<p class="pickup-point__elem">
-																		понедельник: 09:00 - 20:00<br>
-																		вторник: 09:00 - 20:00<br>
-																		среда: 09:00 - 20:00<br>
-																		четверг: 09:00 - 20:00<br>
-																		пятница: 09:00 - 20:00<br>
-																		суббота: 09:00-18:00<br>
-																		вс: выходной
-																	</p>
-																</div>
-																<div class="pickup-point__block">
-																	<h4 class="pickup-point__subtitle">Телефоны</h4>
-																	<p class="pickup-point__elem">
-																		<a href="tel:375172091212">+375 (17) 209-12-12</a>
-																		<a href="tel:357298093233">+357 (29) 809-32-33</a>
-																	</p>
-																</div>
+									</div>
+									<div class="pickup-point__slider-wraper">
+										<div class="swiper">
+											<div class="swiper-wrapper">
+												<div class="swiper-slide">
+													<div class="pickup-point__item">
+														<h4 class="pickup-point__name">Аптека ADEL N58</h4>
+														<p class="pickup-point__description">ст. метро "Партизанская", вестибюль 1; выход к ул. Долгобродской</p>
+														<a href="#" class="pickup-point__link">
+															<svg>
+																<use xlink:href="img/sprite.svg#icon-location-filled"></use>
+															</svg>
+															<span>Посмотреть на карте</span>
+														</a>
+														<div class="pickup-point__blocks">
+															<div class="pickup-point__block">
+																<h4 class="pickup-point__subtitle">График работы</h4>
+																<p class="pickup-point__elem">
+																	понедельник: 09:00 - 20:00<br>
+																	вторник: 09:00 - 20:00<br>
+																	среда: 09:00 - 20:00<br>
+																	четверг: 09:00 - 20:00<br>
+																	пятница: 09:00 - 20:00<br>
+																	суббота: 09:00-18:00<br>
+																	вс: выходной
+																</p>
+															</div>
+															<div class="pickup-point__block">
+																<h4 class="pickup-point__subtitle">Телефоны</h4>
+																<p class="pickup-point__elem">
+																	<a href="tel:375172091212">+375 (17) 209-12-12</a>
+																	<a href="tel:357298093233">+357 (29) 809-32-33</a>
+																</p>
 															</div>
 														</div>
 													</div>
-													<div class="swiper-slide">
-														<div class="pickup-point__item">
-															<h4 class="pickup-point__name">Аптека №12 ADEL</h4>
-															<p class="pickup-point__description">г. Минск, ул. Мележа, 1</p>
-															<a href="#" class="pickup-point__link">
-																<svg>
-																	<use xlink:href="img/sprite.svg#icon-location-filled"></use>
-																</svg>
-																<span>Посмотреть на карте</span>
-															</a>
-															<div class="pickup-point__blocks">
-																<div class="pickup-point__block">
-																	<h4 class="pickup-point__subtitle">График работы</h4>
-																	<p class="pickup-point__elem">
-																		понедельник: 09:00 - 20:00<br>
-																		вторник: 09:00 - 20:00<br>
-																		среда: 09:00 - 20:00<br>
-																		четверг: 09:00 - 20:00<br>
-																		пятница: 09:00 - 20:00<br>
-																		суббота: 09:00-18:00<br>
-																		вс: выходной
-																	</p>
-																</div>
-																<div class="pickup-point__block">
-																	<h4 class="pickup-point__subtitle">Телефоны</h4>
-																	<p class="pickup-point__elem">
-																		<a href="tel:375172091212">+375 (17) 209-12-12</a>
-																		<a href="tel:357298093233">+357 (29) 809-32-33</a>
-																	</p>
-																</div>
+												</div>
+												<div class="swiper-slide">
+													<div class="pickup-point__item">
+														<h4 class="pickup-point__name">Аптека №12 ADEL</h4>
+														<p class="pickup-point__description">г. Минск, ул. Мележа, 1</p>
+														<a href="#" class="pickup-point__link">
+															<svg>
+																<use xlink:href="img/sprite.svg#icon-location-filled"></use>
+															</svg>
+															<span>Посмотреть на карте</span>
+														</a>
+														<div class="pickup-point__blocks">
+															<div class="pickup-point__block">
+																<h4 class="pickup-point__subtitle">График работы</h4>
+																<p class="pickup-point__elem">
+																	понедельник: 09:00 - 20:00<br>
+																	вторник: 09:00 - 20:00<br>
+																	среда: 09:00 - 20:00<br>
+																	четверг: 09:00 - 20:00<br>
+																	пятница: 09:00 - 20:00<br>
+																	суббота: 09:00-18:00<br>
+																	вс: выходной
+																</p>
+															</div>
+															<div class="pickup-point__block">
+																<h4 class="pickup-point__subtitle">Телефоны</h4>
+																<p class="pickup-point__elem">
+																	<a href="tel:375172091212">+375 (17) 209-12-12</a>
+																	<a href="tel:357298093233">+357 (29) 809-32-33</a>
+																</p>
 															</div>
 														</div>
 													</div>
@@ -2280,20 +2280,22 @@
 									</div>
 								</div>
 							</div>
-							<div class="order__block order__block--fifty">
-								<div class="order__block-wrap">
-									<h3 class="order__subtitle">Контактные данные</h3>
-									<div class="order__inner">
-										<span class="order__elem order__elem--grey">Телефон:</span>
-										<span class="order__elem">+375 (29) 78-34-11</span>
-									</div>
+						</div>
+						<div class="order__block">
+							<div class="order__block-wrap">
+								<h3 class="order__subtitle">Контактные данные</h3>
+								<div class="order__inner">
+									<span class="order__elem order__elem--grey">Телефон:</span>
+									<span class="order__elem">+375 (29) 78-34-11</span>
 								</div>
-								<div class="order__block-wrap">
-									<h3 class="order__subtitle">Оплата</h3>
-									<div class="order__inner">
-										<span class="order__elem order__elem--grey">Способ оплаты:</span>
-										<span class="order__elem">Наличные или картой при получении</span>
-									</div>
+							</div>
+						</div>
+						<div class="order__block">
+							<div class="order__block-wrap">
+								<h3 class="order__subtitle">Оплата</h3>
+								<div class="order__inner">
+									<span class="order__elem order__elem--grey">Способ оплаты:</span>
+									<span class="order__elem">Наличные или картой при получении</span>
 								</div>
 							</div>
 						</div>
@@ -5552,6 +5554,7 @@
 	</div>
 	<!-- end of similar products -->
 	<!-- scripts -->
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	<script src="js/vendor.min.js"></script>
 	<script src="js/app.min.js"></script>
 </body>
