--- a/news-inner.html
+++ b/news-inner.html
@@ -5448,6 +5448,7 @@
 	</div>
 	<!-- end of modal city -->
 	<!-- scripts -->
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	<script src="js/vendor.min.js"></script>
 	<script src="js/app.min.js"></script>
 </body>
