--- a/category.html
+++ b/category.html
@@ -2599,7 +2599,7 @@
 														<button class="c-quantity__btn c-quantity__btn--plus">+</button>
 													</div>
 												</div>
-												<a href="#" class="catalog-card__btn btn btn--sm btn--text-mob btn--red">
+												<a href="#" class="catalog-card__btn btn btn--sm btn--icon-mob btn--red">
 													<svg>
 														<use xlink:href="img/sprite.svg#icon-basket"></use>
 													</svg>
