--- a/category.html
+++ b/category.html
@@ -2110,39 +2110,37 @@
 										<div class="catalog-filter__main">
 											<div class="catalog-filtered catalog__filtered">
 												<div class="catalog-filtered__wrapper">
-													<div class="catalog-filtered__scroll">
-														<div class="catalog-filtered__list">
-															<div class="catalog-filtered__tag">
-																<span>от <span class="number">73</span> р.</span>
-																<button class="catalog-filtered__delete">
-																	<svg>
-																		<use xlink:href="img/sprite.svg#icon-close"></use>
-																	</svg>
-																</button>
-															</div>
-															<div class="catalog-filtered__tag">
-																<span>Активный фильтр</span>
-																<button class="catalog-filtered__delete">
-																	<svg>
-																		<use xlink:href="img/sprite.svg#icon-close"></use>
-																	</svg>
-																</button>
-															</div>
-															<div class="catalog-filtered__tag">
-																<span>Беларусь</span>
-																<button class="catalog-filtered__delete">
-																	<svg>
-																		<use xlink:href="img/sprite.svg#icon-close"></use>
-																	</svg>
-																</button>
-															</div>
+													<div class="catalog-filtered__list">
+														<div class="catalog-filtered__tag">
+															<span>от <span class="number">73</span> р.</span>
+															<button class="catalog-filtered__delete">
+																<svg>
+																	<use xlink:href="img/sprite.svg#icon-close"></use>
+																</svg>
+															</button>
 														</div>
+														<div class="catalog-filtered__tag">
+															<span>Активный фильтр</span>
+															<button class="catalog-filtered__delete">
+																<svg>
+																	<use xlink:href="img/sprite.svg#icon-close"></use>
+																</svg>
+															</button>
+														</div>
+														<div class="catalog-filtered__tag">
+															<span>Беларусь</span>
+															<button class="catalog-filtered__delete">
+																<svg>
+																	<use xlink:href="img/sprite.svg#icon-close"></use>
+																</svg>
+															</button>
+														</div>
+														<button class="catalog-filtered__clear">
+															<svg>
+																<use xlink:href="img/sprite.svg#icon-close"></use>
+															</svg>
+														</button>
 													</div>
-													<button class="catalog-filtered__clear">
-														<svg>
-															<use xlink:href="img/sprite.svg#icon-close"></use>
-														</svg>
-													</button>
 												</div>
 											</div>
 											<div class="catalog-links catalog-filter__links">
@@ -2243,7 +2241,7 @@
 															<input type="checkbox" class="square-checkbox__input" id="filter-group-04">
 															<label for="filter-group-04" class="square-checkbox__group">
 																<span class="square-checkbox__icon"></span>
-																<span class="square-checkbox__title">Франция</span>
+																<span class="square-checkbox__title">Франция Франция Франция Франция Франция Франция Франция</span>
 															</label>
 														</div>
 														<div class="square-checkbox catalog-filter__checkbox">
