--- a/category.html
+++ b/category.html
@@ -2433,11 +2433,11 @@
 														<div class="range-field catalog-filter__range-input">
 															<div class="range-field__group">
 																<span class="range-field__help">от</span>
-																<input type="number" id="range-money-min" class="range-field__input range-field__input--min" placeholder="0">
+																<input type="number" id="range-money-min" class="range-field__input range-field__input--min" placeholder="0" disabled>
 															</div>
 															<div class="range-field__group">
 																<span class="range-field__help">до</span>
-																<input type="number" id="range-money-max" class="range-field__input range-field__input--max" placeholder="1000">
+																<input type="number" id="range-money-max" class="range-field__input range-field__input--max" placeholder="1000" disabled>
 															</div>
 														</div>
 													</div>
