--- a/category.html
+++ b/category.html
@@ -2434,6 +2434,7 @@
 															<div class="range-field__group">
 																<span class="range-field__help">от</span>
 																<input type="number" id="range-money-min" class="range-field__input range-field__input--min" placeholder="0" disabled>
+																<label for="range-money-min" class="range-field__label"></label>
 															</div>
 															<div class="range-field__group">
 																<span class="range-field__help">до</span>
