--- a/category.html
+++ b/category.html
@@ -2439,6 +2439,7 @@
 															<div class="range-field__group">
 																<span class="range-field__help">до</span>
 																<input type="number" id="range-money-max" class="range-field__input range-field__input--max" placeholder="1000" disabled>
+																<label for="range-money-max" class="range-field__label"></label>
 															</div>
 														</div>
 													</div>
