--- a/search.html
+++ b/search.html
@@ -2452,8 +2452,9 @@
 									<a href="#" class="catalog-card__img">
 										<img src="img/catalog-01.png" alt="Image">
 										<div class="catalog-card__statuses">
-											<span class="catalog-card__status catalog-card__status--red">Акция</span>
-											<span class="catalog-card__status catalog-card__status--blue">Новинка</span>
+											<span class="catalog-card__status catalog-card__status--orange">Акция</span>
+											<span class="catalog-card__status catalog-card__status--indigo">Новинка</span>
+											<span class="catalog-card__status catalog-card__status--pink">Рекомендуем</span>
 											<span class="catalog-card__status">Хит</span>
 										</div>
 									</a>
