--- a/delivery.html
+++ b/delivery.html
@@ -3266,18 +3266,6 @@
 				<div class="similar-products__top">
 					<div class="similar-products__inner">
 						<h3 class="similar-products__heading">Аналоги</h3>
-						<div class="swiper-controls similar-products__controls">
-							<button class="swiper-button-prev" aria-label="Назад">
-								<svg class="swiper-button-icon">
-									<use xlink:href="img/sprite.svg#icon-arrow-prev"></use>
-								</svg>
-							</button>
-							<button class="swiper-button-next" aria-label="Далее">
-								<svg class="swiper-button-icon">
-									<use xlink:href="img/sprite.svg#icon-arrow-next"></use>
-								</svg>
-							</button>
-						</div>
 					</div>
 					<button class="similar-products__close" id="similar-products-close" aria-label="Закрыть">
 						<svg>
@@ -3294,8 +3282,9 @@
 										<a href="#" class="catalog-card__img">
 											<img src="img/catalog-01.png" alt="Image">
 											<div class="catalog-card__statuses">
-												<span class="catalog-card__status catalog-card__status--red">Акция</span>
-												<span class="catalog-card__status catalog-card__status--blue">Новинка</span>
+												<span class="catalog-card__status catalog-card__status--orange">Акция</span>
+												<span class="catalog-card__status catalog-card__status--indigo">Новинка</span>
+												<span class="catalog-card__status catalog-card__status--pink">Рекомендуем</span>
 												<span class="catalog-card__status">Хит</span>
 											</div>
 										</a>
@@ -3449,8 +3438,9 @@
 										<a href="#" class="catalog-card__img">
 											<img src="img/catalog-01.png" alt="Image">
 											<div class="catalog-card__statuses">
-												<span class="catalog-card__status catalog-card__status--red">Акция</span>
-												<span class="catalog-card__status catalog-card__status--blue">Новинка</span>
+												<span class="catalog-card__status catalog-card__status--orange">Акция</span>
+												<span class="catalog-card__status catalog-card__status--indigo">Новинка</span>
+												<span class="catalog-card__status catalog-card__status--pink">Рекомендуем</span>
 												<span class="catalog-card__status">Хит</span>
 											</div>
 										</a>
@@ -3486,6 +3476,16 @@
 								</div>
 							</div>
 						</div>
+						<button class="swiper-button-prev" aria-label="Назад">
+							<svg class="swiper-button-icon">
+								<use xlink:href="img/sprite.svg#icon-arrow-prev"></use>
+							</svg>
+						</button>
+						<button class="swiper-button-next" aria-label="Далее">
+							<svg class="swiper-button-icon">
+								<use xlink:href="img/sprite.svg#icon-arrow-next"></use>
+							</svg>
+						</button>
 					</div>
 				</div>
 			</div>
