--- a/category.html
+++ b/category.html
@@ -2094,7 +2094,10 @@
 							<h2 class="page-top__heading">Антибиотики и противопротозойные средства <small><span>30 817</span> товаров</small></h2>
 						</div>
 					</div>
-					<a href="#" class="catalog__main-media">
+					<a href="#" class="catalog__main-media is--desktop">
+						<img src="img/catalog-banner-01.jpg" alt="Image">
+					</a>
+					<a href="#" class="catalog__main-media is--mobile">
 						<img src="img/catalog-banner-01.jpg" alt="Image">
 					</a>
 					<div class="catalog__wrap">
